--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,58 @@
+/* Reset */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+/* Body */
 body {
-    font-family: Arial;
-    background-color: #f4f4f4;
+    background: liner-gradient(to right, #1f4037, #99f2c8);
+    color: white;
     text-align: center;
 }
+/* Header */
 header {
-    background-color: #222;
-    color: white;
+    background: rgba(0, 0, 0, 0.7);
     padding: 20px;
 }
+/* Navigation */
+nav {
+    margin-top: 10px;
+}
+nav a {
+    text-decoration: none;
+    clolor: white;
+    margin: 10px;
+    padding: 8px 15px;
+    border-radius: 20px;
+    transition: 0.3s;
+    background-color: #2c5364;
+}
+nav a:hover {
+    background-color: #00c9a7;
+    color: black;
+}
+
+/* Sections */
 section {
-    margin: 20px;
-    padding: 20px;
-    background: white;
-    border-radius: 10px;
+    margin: 40px;
+    padding: 30px;
+    background: rgba(0, 0, 0, 0.5);
+    border-radius: 15px;
+}
+
+/* Buttons */
+button {
+    padding: 10px 20px;
+    border: none;
+    border-radius: 20px;
+    background-color: #00c9a7;
+    color: black;
+    cursor: pointer;
+    transition: 0.3s;
+}
+button:hover {
+    background-color: white;
 }
