--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ nav {
 }
 nav a {
     text-decoration: none;
-    clolor: white;
+    color: white;
     margin: 10px;
     padding: 8px 15px;
     border-radius: 20px;
